<resources>
    <string name="app_name">Skin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Terrence Wright</string>
    <string name="nav_header_subtitle">Premium User(SkinExam)</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">DashBoard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="myCase">My Case</string>
    <string name="ch_pass">Change Password</string>
    <string name="edit_profile">\tEdit Profile</string>
    <string name="log_out">LogOut</string>
    <string name="history">My History</string>
    <string name="plan">My Activity Plan</string>
    <string name="subscription">Subscription</string>
    <string name="newCase">New Case</string>
    <string name="menu_mycase">My case</string>
    <string name="menu_myplan">My Activity Plan</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_newcase">New Case</string>
    <string name="menu_history">My History</string>
    <string name="menu_changepwd">Change Password</string>
    <string name="menu_logout">LogOut</string>
    <string name="please_click">Click the button below to post your skin\n problem and have it reviewed by our\n skin experts</string>
    <string name="skin_problem">Are you concerned about a skin\n problem?</string>
    <string name="post_problem">\tPOST PROBLEM \t</string>
    <string name="already_account">Already have an account?</string>
    <string name="reset_password">Please enter your email id and we will send link to reset the password</string>
    <string name="sign_in">Sign In</string>
    <string name="add_case">\t Add a new case</string>
    <string name="choose_title">Choose a title for your case then add \n pictures below</string>
    <string name="title">\t TITLE : </string>
    <string name="img_description">Please enter the description</string>
    <string name="txt_description">Please enter your response</string>
    <string name="used">Have you treated this with something before submitting \n this to us? If so, please tell us here what ou used: </string>
    <string name="summary">What most concerns you about your skin condition?</string>
    <string name="email">Email:</string>
    <string name="btn_send">Send</string>
    <string name="password">Password</string>
    <string name="register_down">Doctors/Providers: Please click on \n Skinexam.com to register</string>
    <string name="skinexam_com"><u>SKINEXAM.COM</u></string>
    <string name="btn_submit">Submit</string>
    <string name="add_case_preview">Add a new case - Preview</string>
    <string name="pre_title">Title : </string>
    <string name="concern">Your Concerns : </string>
    <string name="state">State : </string>
    <string name="body">Body Part : </string>
    <string name="prior">Prior Treatment : </string>
    <string name="please_regist">Please register before processing</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="cnf_pass">Confirm Password</string>
    <string name="agree">I agree to</string>
    <string name="terms"><u>Terms and Condition</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="home_tel_no">Home Tel No:</string>
    <string name="cell_phone_no">Cell Phone No:</string>
    <string name="btn_save">SAVE</string>
    <string name="oneM">1 Month Plan</string>
    <string name="threeM">3 Month Plan</string>
    <string name="sixM">6 Month Plan</string>
    <string name="twelveM">12 Month Plan</string>
    <string name="recent">Recently\n Ansered Case</string>
    <string name="pend">Pendding Cases</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_network_check">Please Check data network Connection</string>
    <string name="loading">Authenticating...</string>
    <string name="summery">Summery</string>
    <string name="Loading">\\t Loading...</string>
</resources>
