<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_Title_Personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_title"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="Contact Information"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/cell_icon"
            android:drawablePadding="15dp"
            android:text="@string/home_tel_no"
            android:textColor="#372c24"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtHomeTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="number"
            android:maxLength="10"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/icon_contact"
            android:drawablePadding="10dp"
            android:text="@string/cell_phone_no"
            android:textColor="#372c24"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtCellPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:text="@string/email"
            android:textColor="#372c24"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_button"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/btn_save"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />

</LinearLayout>
