<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@drawable/img_dashbord"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="2px">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/skinexam_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/skin_problem"
                        android:textSize="18sp"
                        android:textColor="@color/text_color"/>


            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/please_click"
                            android:textSize="18sp"
                            android:textColor="@color/text_color" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:orientation="vertical"
                            android:layout_gravity="center">

<!--                            <Button-->
<!--                                android:id="@+id/post_problem_btn"-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:layout_centerInParent="true"-->
<!--                                android:layout_gravity="center_vertical"-->
<!--                                android:background="@drawable/mybutton"-->
<!--                                android:fontFamily="sans-serif"-->
<!--                                android:gravity="center"-->
<!--                                android:text="@string/post_problem"-->
<!--                                android:textColor="@color/ColorPrimary"-->
<!--                                android:textSize="6pt" />-->
                            <Button
                                android:id="@+id/post_problem_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/selector_button"
                                android:gravity="center"
                                android:textColor="#FFFFFF"
                                android:text="@string/post_problem"
                                android:textSize="18sp"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

<!--                    <LinearLayout-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:layout_weight="1"-->
<!--                        android:orientation="vertical"></LinearLayout>-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:layout_weight="5"-->
<!--                        android:orientation="horizontal">-->

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="18sp"
                            android:text="@string/already_account"
                            android:fontFamily="sans-serif" />


                        <TextView
                            android:id="@+id/SignIn_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:textSize="18sp"
                            android:text="@string/sign_in"
                            android:textColor="@color/btn_bg"
                            android:fontFamily="sans-serif"/>
<!--                    </LinearLayout>-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:layout_weight="1"-->
<!--                        android:orientation="vertical"></LinearLayout>-->
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>